# calendarapp-

./: .gitignore  .python-version  ARCHITECTURE_ecalendar.md  Analysis of CalendarApp 21 Mar.txt  Fix22Mar.md  RUNTIME_CUTOVER_TODO.md  Rcairocolors.csv  RuleRedesign.md  SIMPLIFICATION_PLAN.md  USER_GUIDE.md  WeekendRedesign.md  blockplan.txt  calendar.db.sql  colorsheet.txt  commit.sh  compactplan.txt  design_unified_style_rules.html  ecalendar.py  events.sql  excelheader.txt  exportdata.txt  fontsheet.txt  generate_random_palettes.sql  icon glyphs.txt  iconsheet.txt  kleenumbers.csv  mini-icon.txt  mini.txt  palettesheet.txt  pyproject.toml  security.md  text-mini.txt  timeline.txt  timescales.py  unified-theme-model-plan.md  weekly.txt
.githooks/: pre-commit
config/: config.py  required_keys.py  style_rules_decompiler.py  styles.py  theme_engine.py  unified_theme.py
db utils/: create.calendar.db.sql  load.colors.sql  load.papersizes.sql  load.patterns.sql
importers/: common.py  import_events.py  import_holidays.py  import_icons.py  import_patterns.py  import_rcairo_colors.py  import_specialdays.py  sample_data.csv
renderers/: __init__.py  css_generator.py  glyph_cache.py  svg_base.py  text_utils.py
shared/: __init__.py  data_models.py  date_utils.py  day_classifier.py  db_access.py  fiscal_calendars.py  fiscal_renderer.py  icon_band.py  rule_engine.py  timeband.py  wbs_filter.py
tests/: test_blockplan.py  test_blockplan_nonworkday.py  test_compactplan.py  test_date_format.py  test_day_classifier.py  test_db_access_resilience.py  test_duration_notes.py  (+24 more)
(+58 files in other folders)
